<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="username"
        android:summary="@string/prefsUnameSummary"
        android:title="@string/prefUsername" />
    <EditTextPreference
        android:key="password"
        android:summary="@string/prefsPasswordSummary"
        android:title="@string/prefsPassword" 
        android:inputType="textPassword" />
    <EditTextPreference
        android:key="serverURL"
        android:summary="@string/prefsServerURLSummary"
        android:title="@string/prefsServerURL" />
    <CheckBoxPreference android:title="@string/prefsTitlestartAtBoot" android:summary="@string/prefsSummaryStartAtBoot" android:key="startAtBoot"/>

</PreferenceScreen>